--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Restaurant "Georgia"</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <div class="brand">
+        <a href="#" class="logo"><i class="fas fa-utensils"></i></a>
+        <div>
+          <h1 class="main-name">Georgia</h1>
+          <p class="sub-name">Restaurant</p>
+        </div>
+      </div>
+
+      <div class="header-banner">
+        <h1 class="main-heading">Welcome</h1>
+        <h3 class="sub-heading">Try Great Georgian Dishes</h3>
+        <button type="button" class="main-btn">Reservation</button>
+      </div>
+    </header>
+  </body>
 </html>
