--- a/index.html
+++ b/index.html
@@ -33,5 +33,36 @@
         <button type="button" class="main-btn">Reservation</button>
       </div>
     </header>
+    <!-- End of Header -->
+    <!-- About Us -->
+    <section class="about-us">
+      <div class="about-us-left">
+        <img src="images/about-us-img.png" alt="" />
+      </div>
+      <div class="about-us-right">
+        <h1 class="main-heading">About Us</h1>
+        <h3 class="sub-heading">Introduction to Georgian Dishes</h3>
+        <div class="stars">
+          <i class="fas fa-star-of-life star"></i>
+          <i class="fas fa-star-of-life star"></i>
+          <i class="fas fa-star-of-life star"></i>
+        </div>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti
+          porro recusandae cumque vero deserunt vitae voluptates, harum aliquid,
+          repellendus earum necessitatibus qui delectus nulla minima ut
+          asperiores quidem ipsa excepturi est consectetur minus voluptate! Nam
+          laboriosam cumque perspiciatis omnis unde dolores nisi expedita,
+          temporibus nulla! Tempora praesentium sit deserunt debitis?
+        </p>
+        <div class="stars">
+          <i class="fas fa-star-of-life star"></i>
+          <i class="fas fa-star-of-life star"></i>
+          <i class="fas fa-star-of-life star"></i>
+        </div>
+        <button type="button" class="main-btn">Read More</button>
+      </div>
+    </section>
+    <!-- End of About Us -->
   </body>
 </html>
